--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "travel-app-3",
-  "version": "0.0.0",
+  "name": "marketplace-ui-1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
